--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "module": "build/index.es.js",
   "jsnext:main": "build/index.es.js",
   "files": [
-    "build"
+    "build/index.js"
   ],
   "scripts": {
     "build": "rollup -c",
