--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "svcodebase",
-  "version": "1.0.6",
+  "version": "1.0.5",
   "description": "codebase",
-  "main": "index.js",
-  "module": "index.es.js",
-  "jsnext:main": "index.es.js",
+  "main": "build/index.js",
+  "module": "build/index.es.js",
+  "jsnext:main": "build/index.es.js",
   "files": [
-    "index.js"
+    "build"
   ],
   "scripts": {
     "build": "rollup -c",
